Explicit and implicit typing with type checking in all statements.

--- a/LexicalAnalyzer.cbp
+++ b/LexicalAnalyzer.cbp
@@ -13,7 +13,7 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters=" -no-print general_testing.txt " />
+				<Option parameters=" -no-print assign_test.txt general_testing.txt output_test.txt input_test.txt if_test.txt  loop_test.txt" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
@@ -53,11 +53,12 @@
 		<Unit filename="bin/input_test.txt" />
 		<Unit filename="bin/loop_test.txt" />
 		<Unit filename="bin/output_test.txt" />
+		<Unit filename="bin/type_test.txt" />
 		<Unit filename="include/AbstractVisitor.h" />
 		<Unit filename="include/PrintVisitor.h" />
 		<Unit filename="include/TypeVisitor.h" />
-		<Unit filename="include/VariableVisitor.h" />
 		<Unit filename="include/ast.h" />
+		<Unit filename="include/environment.h" />
 		<Unit filename="include/exception.h" />
 		<Unit filename="include/lexer.h" />
 		<Unit filename="include/parser.h" />
@@ -65,8 +66,8 @@
 		<Unit filename="makefile" />
 		<Unit filename="src/PrintVisitor.cpp" />
 		<Unit filename="src/TypeVisitor.cpp" />
-		<Unit filename="src/VariableVisitor.cpp" />
 		<Unit filename="src/ast.cpp" />
+		<Unit filename="src/environment.cpp" />
 		<Unit filename="src/exception.cpp" />
 		<Unit filename="src/lexer.cpp" />
 		<Unit filename="src/main.cpp" />
