--- a/LexicalAnalyzer.cbp
+++ b/LexicalAnalyzer.cbp
@@ -13,7 +13,7 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters=" -no-print assign_test.txt general_testing.txt output_test.txt input_test.txt if_test.txt  loop_test.txt" />
+				<Option parameters=" -no-print assign_test.txt general_testing.txt output_test.txt input_test.txt if_test.txt  loop_test.txt type_test.txt" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
