--- a/LexicalAnalyzer.cbp
+++ b/LexicalAnalyzer.cbp
@@ -5,15 +5,15 @@
 		<Option title="LexicalAnalyzer" />
 		<Option makefile="makefile" />
 		<Option pch_mode="2" />
-		<Option compiler="gnu_gcc_6_compiler" />
+		<Option compiler="mingw-64_compiler" />
 		<Build>
 			<Target title="Debug">
 				<Option output="bin/Debug/LexicalAnalyzer" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="bin" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
-				<Option compiler="gnu_gcc_6_compiler" />
-				<Option parameters=" general_testing.txt" />
+				<Option compiler="mingw-64_compiler" />
+				<Option parameters="-no-print assign_test.txt general_testing.txt if_test.txt input_test.txt loop_test.txt output_test.txt" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
@@ -34,13 +34,15 @@
 			</Target>
 		</Build>
 		<Compiler>
-			<Add option="-Weffc++" />
+			<Add option="-pedantic-errors" />
 			<Add option="-pedantic" />
 			<Add option="-Wextra" />
 			<Add option="-Wall" />
-			<Add option="-std=c++14" />
+			<Add option="-g" />
 			<Add option="-fexceptions" />
+			<Add option="-std=c++14" />
 			<Add directory="include" />
+			<Add directory="C:/dev/boost_1_61_0" />
 		</Compiler>
 		<Unit filename="README">
 			<Option target="Release" />
@@ -74,6 +76,9 @@
 		<Unit filename="bin/output_test.txt">
 			<Option target="Release" />
 		</Unit>
+		<Unit filename="bin/tests/max.txt" />
+		<Unit filename="bin/tests/string_manipulation.txt" />
+		<Unit filename="bin/tests/summation.txt" />
 		<Unit filename="bin/type_test.txt">
 			<Option target="Release" />
 		</Unit>
@@ -81,13 +86,16 @@
 		<Unit filename="include/Interpreter.h" />
 		<Unit filename="include/PrintVisitor.h" />
 		<Unit filename="include/TypeVisitor.h" />
+		<Unit filename="include/all_type.h" />
 		<Unit filename="include/ast.h" />
 		<Unit filename="include/environment.h" />
 		<Unit filename="include/exception.h" />
 		<Unit filename="include/iddata.h" />
 		<Unit filename="include/lexer.h" />
+		<Unit filename="include/mixedModeFilter.h" />
 		<Unit filename="include/parser.h" />
 		<Unit filename="include/token.h" />
+		<Unit filename="include/vardata.h" />
 		<Unit filename="makefile">
 			<Option target="Release" />
 		</Unit>
@@ -101,6 +109,7 @@
 		<Unit filename="src/main.cpp" />
 		<Unit filename="src/parser.cpp" />
 		<Unit filename="src/token.cpp" />
+		<Unit filename="src/vardata.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
