--- a/LexicalAnalyzer.cbp
+++ b/LexicalAnalyzer.cbp
@@ -5,25 +5,45 @@
 		<Option title="LexicalAnalyzer" />
 		<Option makefile="makefile" />
 		<Option pch_mode="2" />
-		<Option compiler="mingw-64_compiler" />
+		<Option compiler="gcc" />
+		<MakeCommands>
+			<Build command="" />
+			<CompileFile command="" />
+			<Clean command="" />
+			<DistClean command="" />
+			<AskRebuildNeeded command="" />
+			<SilentBuild command=" &gt; $(CMD_NULL)" />
+		</MakeCommands>
 		<Build>
 			<Target title="Debug">
 				<Option output="bin/Debug/LexicalAnalyzer" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="bin" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
-				<Option compiler="mingw-64_compiler" />
-				<Option parameters="-no-print assign_test.txt general_testing.txt if_test.txt input_test.txt loop_test.txt output_test.txt" />
+				<Option compiler="gcc" />
+				<Option parameters="-no-print -a general_testing.txt " />
+				<Option projectCompilerOptionsRelation="-1" />
+				<Option projectLinkerOptionsRelation="-1" />
+				<Option projectIncludeDirsRelation="-1" />
+				<Option projectLibDirsRelation="-1" />
 				<Compiler>
-					<Add option="-g" />
+					<Add option="-Og" />
 				</Compiler>
+				<MakeCommands>
+					<Build command="" />
+					<CompileFile command="" />
+					<Clean command="" />
+					<DistClean command="" />
+					<AskRebuildNeeded command="" />
+					<SilentBuild command=" &gt; $(CMD_NULL)" />
+				</MakeCommands>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/LexicalAnalyzer" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="bin" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
-				<Option compiler="gnu_gcc_6_compiler" />
+				<Option compiler="gcc" />
 				<Option parameters="assign_test.txt general_testing.txt if_test.txt input_test.txt loop_test.txt output_test.txt" />
 				<Compiler>
 					<Add option="-O2" />
@@ -38,11 +58,8 @@
 			<Add option="-pedantic" />
 			<Add option="-Wextra" />
 			<Add option="-Wall" />
-			<Add option="-g" />
-			<Add option="-fexceptions" />
 			<Add option="-std=c++14" />
 			<Add directory="include" />
-			<Add directory="C:/dev/boost_1_61_0" />
 		</Compiler>
 		<Unit filename="README">
 			<Option target="Release" />
@@ -83,6 +100,7 @@
 			<Option target="Release" />
 		</Unit>
 		<Unit filename="include/AbstractVisitor.h" />
+		<Unit filename="include/AssemblyVisitor.h" />
 		<Unit filename="include/Interpreter.h" />
 		<Unit filename="include/PrintVisitor.h" />
 		<Unit filename="include/TypeVisitor.h" />
@@ -99,6 +117,7 @@
 		<Unit filename="makefile">
 			<Option target="Release" />
 		</Unit>
+		<Unit filename="src/AssemblyVisitor.cpp" />
 		<Unit filename="src/Interpreter.cpp" />
 		<Unit filename="src/PrintVisitor.cpp" />
 		<Unit filename="src/TypeVisitor.cpp" />
