--- a/LexicalAnalyzer.cbp
+++ b/LexicalAnalyzer.cbp
@@ -5,7 +5,7 @@
 		<Option title="LexicalAnalyzer" />
 		<Option makefile="makefile" />
 		<Option pch_mode="2" />
-		<Option compiler="gcc" />
+		<Option compiler="mingw-64_compiler" />
 		<MakeCommands>
 			<Build command="" />
 			<CompileFile command="" />
@@ -20,13 +20,12 @@
 				<Option working_dir="bin" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
-				<Option compiler="gcc" />
-				<Option parameters="-no-print -a general_testing.txt " />
-				<Option projectCompilerOptionsRelation="-1" />
+				<Option compiler="mingw-64_compiler" />
+				<Option parameters=" -a general_testing.txt " />
 				<Option projectLinkerOptionsRelation="-1" />
-				<Option projectIncludeDirsRelation="-1" />
 				<Option projectLibDirsRelation="-1" />
 				<Compiler>
+					<Add option="-g" />
 					<Add option="-Og" />
 				</Compiler>
 				<MakeCommands>
@@ -43,7 +42,7 @@
 				<Option working_dir="bin" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
-				<Option compiler="gcc" />
+				<Option compiler="mingw-64_compiler" />
 				<Option parameters="assign_test.txt general_testing.txt if_test.txt input_test.txt loop_test.txt output_test.txt" />
 				<Compiler>
 					<Add option="-O2" />
@@ -60,6 +59,7 @@
 			<Add option="-Wall" />
 			<Add option="-std=c++14" />
 			<Add directory="include" />
+			<Add directory="C:/dev/boost_1_61_0" />
 		</Compiler>
 		<Unit filename="README">
 			<Option target="Release" />
@@ -100,6 +100,7 @@
 			<Option target="Release" />
 		</Unit>
 		<Unit filename="include/AbstractVisitor.h" />
+		<Unit filename="include/AsmStructure.h" />
 		<Unit filename="include/AssemblyVisitor.h" />
 		<Unit filename="include/Interpreter.h" />
 		<Unit filename="include/PrintVisitor.h" />
@@ -117,6 +118,7 @@
 		<Unit filename="makefile">
 			<Option target="Release" />
 		</Unit>
+		<Unit filename="src/AsmStructure.cpp" />
 		<Unit filename="src/AssemblyVisitor.cpp" />
 		<Unit filename="src/Interpreter.cpp" />
 		<Unit filename="src/PrintVisitor.cpp" />
